# mpiheat2d

./: .gitignore  CMakeLists.txt  README.md
data/: data.xdmf  input.cfg
include/: heatfast.h
src/: heatfast.c  heatfield.c  heatio.c  heatmpi.c
tools/: generateInitialField.py  generateXdmf.py
